# tomographer

./: .gitignore
TomographerTester/: CMakeLists.txt  mainwindow.cpp
build-tomographer-lib-Android_Qt_5_15_1_Clang_Multi_Abi-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
build-tomographer-lib-Android_Qt_5_15_1_Clang_Multi_Abi-Debug/.cmake/api/v1/reply/: cache-v2-ead8fb818c05f80049fd.json  cmakeFiles-v1-c2534e447a21143389fc.json  codemodel-v2-afa6fd91b84541c599f7.json  index-2020-09-13T13-54-43-0680.json  target-tester-Debug-21785bfaede2fb3f9262.json  target-tomographer-Debug-8bdf32b411ebf7ebc89c.json
build-tomographer-lib-Android_Qt_5_15_1_Clang_Multi_Abi-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  android_deployment_settings.json  build.ninja  cmake_install.cmake  rules.ninja
build-tomographer-lib-Android_Qt_5_15_1_Clang_Multi_Abi-Release/.cmake/api/v1/reply/: cache-v2-939ba8d0a0e0091da88f.json  cmakeFiles-v1-d8e9f75ee4a46593cb7f.json  codemodel-v2-bb76493245bc5ca3d322.json  index-2020-09-13T14-00-21-0876.json  target-tester-Release-1e2a6a0eca8198e1d37e.json  target-tomographer-Release-0c6d4735344aba7df6fb.json
build-tomographer-lib-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  tester.exp  tester.lib  tomographer.exp
build-tomographer-lib-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-6790325cb3229609bccc.json  cmakeFiles-v1-2bcd50de70c522dc7369.json  codemodel-v2-dde4639e2ec32f3ad1bf.json  index-2020-09-13T13-52-43-0894.json  target-tester-Debug-755aceb49d7789244666.json  target-tomographer-Debug-d21b55e94c6d7a13dc6e.json
build-tomographer-lib-Desktop_Qt_5_15_1_MSVC2019_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  tester.exp  tomographer.exp  tomographer.lib
build-tomographer-lib-Desktop_Qt_5_15_1_MSVC2019_64bit-Release/.cmake/api/v1/reply/: cache-v2-6ee64b0577316f6d435b.json  cmakeFiles-v1-358aa6dc9f035c5dc0f3.json  codemodel-v2-417918e2893f00daa825.json  index-2020-09-13T13-52-56-0358.json  target-tester-Release-24e5b15d9068d7b254b3.json  target-tomographer-Release-69c708a9470fcaf4122c.json
tomographer-lib/: CMakeLists.txt
tomographer-lib/includes/: LibraryContext.h  datasetUtils.h  dicomFileVO.h  dicomTags.h  findAllDicomsInPath.h  gdcmUtils.h  readDicoms.h  stringUtils.h  tomographer.h
tomographer-lib/src/: LibraryContext.cpp  StringUtils.cpp  datasetUtils.cpp  findAllDicomsInPath.cpp  gdcmUtils.cpp  readDicoms.cpp  tomographer.cpp
unity-client/Assets/: LibTomographerInterface.cs
unity-client/Assets/PowerUI/Examples (Remove On Publish)/15. Web/: WebHtml.html
unity-client/Assets/PowerUI/Source/Engine/: AudioPackage.cs  DataPackage.cs  ImagePackage.cs
unity-client/Assets/PowerUI/Source/Engine/Image Formats/: VideoFormat.cs
unity-client/Assets/PowerUI/Source/Http/: HttpRequest.cs
unity-client/Assets/Scenes/: SampleScene.unity  SampleSceneView.html  SampleSceneViewController.cs
unity-client/ProjectSettings/: ProjectSettings.asset
(+1 files in other folders)
